# distros

./: Cargo.toml  README.md  build.rs
crates/acpi/: Cargo.toml
crates/acpi-aml/: Cargo.toml
crates/acpi-aml/src/: handler.rs  lib.rs
crates/acpi/src/: lib.rs
crates/cpuid/: Cargo.toml
crates/cpuid/src/: fpu.rs  lib.rs
crates/fpu/: Cargo.toml
crates/fpu/src/: lib.rs
crates/framebuffer/: Cargo.toml
crates/framebuffer-vesa/: Cargo.toml
crates/framebuffer-vesa/src/: lib.rs
crates/framebuffer/src/: lib.rs  rgb.rs
crates/interrupt/: Cargo.toml
crates/interrupt-pic/: Cargo.toml
crates/interrupt-pic/src/: ioapic.rs  isa.rs  lapic.rs  lib.rs  pic8259.rs
crates/interrupt/src/: gdt.rs  idt.rs  lib.rs  macros.rs  nmi.rs
crates/logging/: Cargo.toml
crates/logging/src/: lib.rs
crates/memory/: Cargo.toml
crates/memory-stack/: Cargo.toml
crates/memory-stack/src/: buffer.rs  lib.rs
crates/memory/src/: frame_alloc.rs  kalloc.rs  lib.rs  page_table.rs
crates/memory/src/arena/: alloc.rs  arenamap.rs  mod.rs  region.rs  util.rs
crates/pci-access/: Cargo.toml
crates/pci-access/src/: lib.rs  pci.rs  pcie.rs
crates/pci-enumerate/: Cargo.toml
crates/pci-enumerate/src/: lib.rs
crates/random/: Cargo.toml
crates/random/src/: lib.rs  rdrand.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs  nice.rs  registry.rs
crates/scheduler/src/scheduler/: context.rs  logic.rs  mod.rs
crates/timer/: Cargo.toml
crates/timer-hpet/: Cargo.toml
crates/timer-hpet/src/: capabilities.rs  hpet.rs  lib.rs  timer.rs
crates/timer-pit/: Cargo.toml
crates/timer-pit/src/: lib.rs  pit.rs
crates/timer-rtc/: Cargo.toml
crates/timer-rtc/src/: cmos.rs  lib.rs  rtc.rs
crates/timer-tsc/: Cargo.toml
crates/timer-tsc/src/: lib.rs
crates/timer/src/: lib.rs
docs/: memory-map.md
example_elf/: Cargo.toml
example_elf/src/: main.rs
libraries/libkernel/: Cargo.toml
libraries/libkernel/src/: lib.rs  syscall.rs
libraries/libkernel/src/flow/: message.rs  mod.rs
libraries/libkernel/src/task/: mod.rs
runner/: Cargo.toml  build.rs
runner/src/: main.rs
src/: acpi.rs  basic_term.rs  cmos.rs  cpuid.rs  elf.rs  fpu.rs  futures.rs  gdt.rs  interrupts.rs  kheap.rs  logging.rs  main.rs  memory.rs  random.rs  vga.rs
src/driver/: keyboard.rs  mod.rs  mouse.rs  pci.rs  smbios.rs
src/driver/device/: mod.rs  ps2.rs
src/driver/gpu/: mod.rs  vesa.rs
src/driver/pci/: device.rs  mod.rs
src/driver/pci/access/: mod.rs  pci.rs  pcie.rs
src/driver/pci/device/: command.rs  mod.rs
src/driver/syslog/: mod.rs  ring.rs  wait.rs
src/driver/tty/: flow.rs  mod.rs  vga.rs
src/flow/: content.rs  dynacontent.rs  getter.rs  manager.rs  message.rs  mod.rs  producer.rs  tree.rs  var.rs
src/flow/serde/: error.rs  mod.rs  serializer.rs
src/gui/: mod.rs  text_display.rs
src/interrupts/: idt.rs  mod.rs  syscall.rs
src/interrupts/pic/: ioapic.rs  lapic.rs  mod.rs  nmi.rs  pic8259.rs
src/interrupts/timer/: hpet.rs  mod.rs  pit.rs  rtc.rs
src/memory/: frame.rs  kheap.rs  liballoc.c  liballoc.h  liballoc.rs  mod.rs  page.rs  page_table.rs  process.rs  util.rs
src/memory/frame/: mod.rs  region.rs
src/memory/process/: liballoc.c  liballoc.h  liballoc.rs  mod.rs  page.rs
src/pic/: ioapic.rs  lapic.rs  mod.rs  nmi.rs  pic8259.rs
src/process/: mod.rs  sleep.rs
src/process/task/: ctx.rs  int.rs  mod.rs  runtime.rs
src/sched/: ctx.rs  int.rs  mod.rs  scheduler.rs
src/timer/: hpet.rs  mod.rs  pit.rs  rtc.rs
