[package]
name = "distros"
version = "0.1.0"
authors = ["Aleksei Arsenev <alesharikReserv@yandex.ru>"]
edition = "2018"

[dependencies]
log = "0.4.14"
bootloader = { version = "0.9.22", features = ["map_physical_memory"] }
spin = "0.9.0"
vga = { git = "https://github.com/rust-osdev/vga.git" }
volatile = "0.4.4"
x86_64 = "0.14.9"
linked_list_allocator = "0.9.0"
acpi = "4.1.0"
x2apic = "0.3.0"
raw-cpuid = "9.0.0"
bitflags = "1.2.1"
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
fixedbitset = { version = "0.4.0", default-features = false }
rand = { version = "0.8.3", default-features = false, features = ["alloc"] }
rand_pcg = "0.3.0"
bit_field = "0.10.1"
rpds = { version = "0.9.0", default-features = false }
futures = { version = "0.3.13", default-features = false, features = ["alloc", "async-await", "bilock", "unstable"] }
async-trait = "0.1.50"
crossbeam-queue = { version = "0.3.2", default-features = false, features = ["alloc"] }
hashbrown = "0.11.2"

ps2 = "0.1.2" # PS2 keyboard and mouse support
pc-keyboard = "0.5.1" # keyboard parser
pci_types = "0.2.0" # PCI types
vte = { git = "https://github.com/alesharik/vte.git", branch = "move-ansi", features = ["ansi"] } # ANSI terminal parser
smbios-lib = { git = "https://github.com/alesharik/smbios-lib.git", features = ["no_std", "x86_64"], default-features = false, branch = "struct_clone" } # SMBIOS
serde = { version = "1.0.127", features = ["derive", "alloc"], default-features = false }
itertools = { version = "0.10.1", default-features = false, features = ["use_alloc"] }
goblin = { version = "0.4.2", default-features = false, features = ["alloc", "endian_fd", "elf32", "elf64", "archive"] }
arrayvec = { version = "0.7.1", default-features = false }
libkernel = { path = "libraries/libkernel" }

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[build-dependencies]
cc = "1.0.68"

[target.'cfg(target_os = "none")']
runner = "bootimage runner"

[package.metadata.bootloader]
kernel-stack-size = 256