[package]
name = "distros"
version = "0.1.0"
authors = ["Aleksei Arsenev <alesharikReserv@yandex.ru>"]
edition = "2018"

[dependencies]
bootloader_api = "0.11.5"
log = "0.4.14"
spin = "0.9.0"
vga = { git = "https://github.com/rust-osdev/vga.git" }
volatile = "0.4.4"
x86_64 = "0.14.9"
linked_list_allocator = "0.9.0"
acpi = "5.0.0"
bitflags = "1.2.1"
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
fixedbitset = { version = "0.4.0", default-features = false }
rand_core = "0.6.4"
bit_field = "0.10.1"
rpds = { version = "0.9.0", default-features = false }
futures = { version = "0.3.13", default-features = false, features = ["alloc", "async-await", "bilock", "unstable"] }
async-trait = "0.1.50"
crossbeam-queue = { version = "0.3.2", default-features = false, features = ["alloc"] }
hashbrown = "0.11.2"

ps2 = "0.1.2" # PS2 keyboard and mouse support
pc-keyboard = "0.5.1" # keyboard parser
pci_types = { git = "https://github.com/alesharik/pci_types.git", branch = "control" } # PCI types
vte = { git = "https://github.com/alesharik/vte.git", branch = "move-ansi", features = ["ansi"] } # ANSI terminal parser
smbios-lib = { git = "https://github.com/alesharik/smbios-lib.git", features = ["no_std", "x86_64"], default-features = false, branch = "struct_clone" } # SMBIOS
serde = { version = "1.0.127", features = ["derive", "alloc"], default-features = false }
itertools = { version = "0.10.1", default-features = false, features = ["use_alloc"] }
goblin = { version = "0.4.2", default-features = false, features = ["alloc", "endian_fd", "elf32", "elf64", "archive"] }
arrayvec = { version = "0.7.1", default-features = false }
thingbuf = { version = "0.1.2", default-features = false, features = ["alloc"] }
noto-sans-mono-bitmap = "0.2.0" # primary font
libkernel = { path = "libraries/libkernel" }

distros-framebuffer = { path = "crates/framebuffer" }
distros-framebuffer-vesa = { path = "crates/framebuffer-vesa" }
distros-logging = { path = "crates/logging" }
distros-memory = { path = "crates/memory" }
distros-cpuid = { path = "crates/cpuid" }
distros-interrupt = { path = "crates/interrupt" }
distros-interrupt-pic = { path = "crates/interrupt-pic" }
distros-acpi = { path = "crates/acpi" }
distros-timer = { path = "crates/timer" }
distros-fpu = { path = "crates/fpu" }
distros-random = { path = "crates/random" }

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[build-dependencies]
cc = "1.0.68"

[workspace]
members = [ "crates/acpi", "crates/cpuid", "crates/fpu","crates/framebuffer", "crates/framebuffer-vesa", "crates/interrupt", "crates/interrupt-pic", "crates/logging", "crates/memory", "crates/random", "crates/timer", "crates/timer-hpet", "crates/timer-rtc", "crates/timer-tsc"]
exclude = ["runner"]
