[package]
name = "example_elf"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libkernel = { path = "../libraries/libkernel" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[build]
rustflags = ["-C", "link-args=-image-base=0x5000000"]