[package]
name = "distros-acpi-aml"
version = "0.1.0"
edition = "2021"

[dependencies]
distros-memory = { path = "../memory" }
distros-acpi = { path = "../acpi" }
distros-pci-access = { path = "../pci-access" }

bit_field.workspace = true

acpi.workspace = true
aml.workspace = true
x86_64.workspace = true
pci_types.workspace = true

log.workspace = true