[package]
name = "distros-interrupt-pic"
version = "0.1.0"
edition = "2021"

[dependencies]
distros-memory = { path = "../memory" }
distros-cpuid = { path = "../cpuid" }
distros-interrupt = { path = "../interrupt" }
distros-acpi = { path = "../acpi" }

lazy_static.workspace = true

x86_64.workspace = true
x2apic.workspace = true
acpi.workspace = true

spin.workspace = true

log.workspace = true