[package]
name = "distros-pci-access"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x86_64 = "0.14.12"
pci_types = "0.6.1"
acpi = "5.0.0"
spin = "0.9.8"
bit_field = "0.10.2"
log = "0.4.20"

distros-memory = { path = "../memory" }
distros-acpi = { path = "../acpi" }