[package]
name = "distros-pci-access"
version = "0.1.0"
edition = "2021"

[dependencies]
distros-memory = { path = "../memory" }
distros-acpi = { path = "../acpi" }

bit_field.workspace = true

x86_64.workspace = true
pci_types.workspace = true
acpi.workspace = true

spin.workspace = true

log.workspace = true