[package]
name = "distros-scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
distros-cpuid = { path = "../cpuid" }
distros-interrupt = { path = "../interrupt" }
distros-interrupt-pic = { path = "../interrupt-pic" }
distros-fpu = { path = "../fpu" }
distros-timer-tsc = { path = "../timer-tsc" }
distros-memory-stack = { path = "../memory-stack" }

bitflags.workspace = true
hashbrown.workspace = true
intrusive-collections.workspace = true

x86_64.workspace = true
x2apic.workspace = true

spin.workspace = true

log.workspace = true
