[package]
name = "distros-timer-hpet"
version = "0.1.0"
edition = "2021"

[dependencies]
distros-timer-rtc = { path = "../timer-rtc" }
distros-memory = { path = "../memory" }
distros-interrupt = { path = "../interrupt" }
distros-interrupt-pic = { path = "../interrupt-pic" }

bit_field.workspace = true

x86_64.workspace = true
acpi.workspace = true

spin.workspace = true

log.workspace = true