[package]
name = "distros-timer-rtc"
version = "0.1.0"
edition = "2021"

[dependencies]
x86_64 = "0.14.12"
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
spin = "0.9.8"
lazy_static = "1.4.0"
bitflags = "2.4.2"
log = "0.4.20"

distros-interrupt = { path = "../interrupt" }
distros-interrupt-pic = { path = "../interrupt-pic" }
distros-timer-tsc = { path = "../timer-tsc" }