[package]
name = "distros-timer-rtc"
version = "0.1.0"
edition = "2021"

[dependencies]
distros-interrupt = { path = "../interrupt" }
distros-interrupt-pic = { path = "../interrupt-pic" }
distros-timer-tsc = { path = "../timer-tsc" }

lazy_static.workspace = true
bitflags.workspace = true

x86_64.workspace = true

chrono.workspace = true

spin.workspace = true

log.workspace = true